# velo

./: .gitignore  BENCHMARKS.md  Cargo.toml  PROGRESS.md  README.md  UI_PLAN.md
crates/app/: Cargo.toml
crates/app/src/: bench.rs  main.rs
crates/editor/: Cargo.toml
crates/editor/src/: buffer.rs  highlight.rs  lib.rs  view.rs  workspace.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: host_client.rs  lib.rs  shell_integration.rs
crates/pty-host/: Cargo.toml
crates/pty-host/src/: main.rs
crates/pty-win/: Cargo.toml
crates/pty-win/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/term-core/: Cargo.toml
crates/term-core/src/: keys.rs  lib.rs  links.rs  palette.rs
crates/text/: Cargo.toml
crates/text/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
csharp/Velo.App/: AgentProfiles.cs  App.xaml  App.xaml.cs  BrowserView.cs  DetailsModels.cs  EditorFileVM.cs  Interop.cs  Log.cs  MainWindow.xaml  MainWindow.xaml.cs  PaletteItem.cs  PaneTree.cs  SessionState.cs  Settings.cs  ShellIntegration.cs  ShellProfiles.cs  TabGroup.cs  TabRowTemplateSelector.cs  TabVM.cs  Themes.cs  Velo.App.csproj  app.manifest
docs/: PLAN-1-PERF-FIXES.md  PLAN-2-FEATURES.md  nested-splits-phase1.md  nested-splits-plan.md
docs/superpowers/plans/: 2026-07-06-editor-mode.md  2026-07-06-palette-opacity-smooth-scrolling.md  2026-07-07-bugfix-round.md  2026-07-07-round2-scroll-editor.md
docs/superpowers/specs/: 2026-07-06-editor-plugins-scrolling-design.md  2026-07-07-bugfix-round-design.md  2026-07-07-round2-scroll-editor-design.md  2026-07-18-ssh-manager-design.md
scripts/: bench_report.py  styles.ps1
scripts/tools/: errors.py  json_pretty.py
