[package]
name = "editor"
edition.workspace = true
version.workspace = true

[dependencies]
term-core = { workspace = true }
ropey = "1"
tree-sitter = "0.26.10"
tree-sitter-highlight = "0.26.10"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
