[package]
name = "velo_core"
edition.workspace = true
version.workspace = true

[lib]
# cdylib -> velo_core.dll for the C# WinUI shell to P/Invoke.
crate-type = ["cdylib"]

[dependencies]
wgpu = { workspace = true }
pollster = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
term-core = { workspace = true }
editor    = { workspace = true }
pty-win = { workspace = true }
renderer = { workspace = true }
text = { workspace = true }

[target.'cfg(windows)'.dependencies]
parking_lot = { workspace = true }
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_DirectComposition",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
] }
