[package]
name = "pty-host"
edition.workspace = true
version.workspace = true

[[bin]]
name = "velo-pty-host"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
pty-win = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_Pipes",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_Security",
] }
